tests/error/effects_errors/pure_result.err
Error: Invalid call of overloaded function (at $FILE:6:10)
  | 
4 | @guppy(max_effects=[])
5 | def main() -> int:
6 |    result("foo", True)
  |           ^^^^^^^^^^^ No variant of overloaded function `result` takes arguments
  |                       `str`, `bool`

Note: Available overloads are:
  def result(tag: str @comptime, value: int) -> None
  def result(tag: str @comptime, value: nat) -> None
  def result(tag: str @comptime, value: bool) -> None
  def result(tag: str @comptime, value: float) -> None
  def result(tag: str @comptime, value: array[int, n]) -> None
  def result(tag: str @comptime, value: array[nat, n]) -> None
  def result(tag: str @comptime, value: array[bool, n]) -> None
  def result(tag: str @comptime, value: array[float, n]) -> None

Guppy compilation failed due to 1 previous error
